# a-data-pro-internship

./: .gitignore  Dockerfile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
app/crawler_files/crawler_files/: items.py  middlewares.py  pipelines.py  settings.py  startCrawling.py
app/crawler_files/crawler_files/spiders/: ardes.py  emag.py  jarcomputers.py  laptop.py
app/main/: forms.py  models.py  urls.py  views.py
app/main/migrations/: 0001_initial.py  0002_auto_20210723_1231.py
app/main/templates/main/: account.html  base.html  crawler.html  home.html  index.html  loginPage.html  productStats.html  registerPage.html  scraper.html  verification_email_template.html
app/mysite/: settings.py  urls.py
bot/: ADataPro_Bot.py
crawler_files/: scrapy.cfg
crawler_files/crawler_files/: items.py  pipelines.py  settings.py  startCrawling.py
crawler_files/crawler_files/spiders/: ardes.py  emag.py  jarcomputers.py  laptop.py
database-script/: database-script.sql
